--- a/website/homepage.css
+++ b/website/homepage.css
@@ -8,6 +8,21 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+  }
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgb(2, 2, 2);
+    border-radius: 10px;
+    background: rgb(88, 88, 88);
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: purple;
+    border-radius: 10px;
+  }
+
 .navbar{
     display: flex;
     align-items: center;
