--- a/website/product.css
+++ b/website/product.css
@@ -142,6 +142,21 @@ td input{
     padding:5px;
 }
 
+.btn-click{
+    display:inline-block;
+    background-color:rgb(55, 52, 52);
+    color:white;
+    padding:8px 15px;
+    margin: 30px 0;
+    border-radius: 30px;
+    transition: background-color 0.5s ;
+    cursor: pointer;
+}
+
+.btn-click:hover{
+    background-color:rgb(0, 0, 0);
+}
+
 .cart-table td a{
     color:purple;
 }
@@ -171,7 +186,9 @@ td:nth-child(2),th:nth-child(2),td:nth-child(3),th:nth-child(3){
     width:340px;
 }
 
-
+.price{
+    text-align: right;
+}
 
 @media only screen and (max-width:600px){
     .single-product .row{
