--- a/website/product.css
+++ b/website/product.css
@@ -113,6 +113,7 @@ select:focus{
 .cart-header{
     width: 100%;
     border-collapse: collapse;
+    padding:20px;
 }
 
 .cart-table{
@@ -179,11 +180,11 @@ td input{
 }
 
 td:first-child,th:first-child{
-    width: 320px;
+    width: 300px;
 }
 
 td:nth-child(2),th:nth-child(2),td:nth-child(3),th:nth-child(3){
-    width:340px;
+    width:320px;
 }
 
 .price{
