--- a/website/homepage.css
+++ b/website/homepage.css
@@ -21,36 +21,8 @@ body{
   ::-webkit-scrollbar-thumb {
     background: purple;
     border-radius: 10px;
-  }
-
-.navbar{
-    display: flex;
-    align-items: center;
-    padding:20px;
-}
-
-nav {
-    flex:1;
-    text-align: right;
-    display: flex;
-    justify-content: flex-end;
-}
-
-nav ul{
-    display: inline-block;
-    list-style-type: none;
-}
-
-nav ul li{
-    display: inline-block;
-    margin-right: 20px;
-}
-
-a{
-    text-decoration: none;
-    color:#555;
-}
-
+  } 
+  
 p{
     color:#555;
 }
@@ -114,6 +86,10 @@ p{
     margin:70px 0;
 }
 
+.pop-pro_img{
+    object-fit: contain;
+}
+
 .col-3{
     flex-basis: 30%;
     min-width: 250px;
@@ -123,6 +99,7 @@ p{
 .col-3 img{
     width:100%;
     height: 250px;
+    object-fit: contain;
 }
 
 .small-container{
@@ -132,9 +109,10 @@ p{
     padding-right: 25px;
 }
 
+
 .col-4{
     flex-basis:25%;
-    padding:10px;
+    padding:12px;
     min-width: 200px;
     margin-bottom:50px;
     transition: transform 0.5s;
@@ -145,7 +123,8 @@ p{
 
 .col-4 img{
     width:100%;
-    height: 250px;
+    height: 200px;
+    object-fit: contain;
 }
 
 .title{
@@ -173,6 +152,14 @@ h4{
     color:rgb(134, 52, 16);
 }
 
+.ProductsDiv{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+}
+
 .col-4 p{
     font-size:14px;
 }
@@ -188,9 +175,9 @@ h4{
     padding:30px 0;
 }
 
-/* .col-2 .offer-img{
-    padding:50px;
-} */
+.col-2 .offer-img{
+    object-fit: contain;
+}
 
 small{
     color:darkgoldenrod;
@@ -256,105 +243,16 @@ small{
     filter:grayscale(0%);
 }
 
-/* footer */
-
-.footer{
-    background-color: black;
-    color:white;
-    font-size: 14px;
-    padding: 60px 0 20px;
-}
-
-.footer p{
-    color:white;
-}
-
-.footer h3{
-    color: white;
-    margin-bottom: 20px;
-}
-
-.footer-col-1,.footer-col-2,.footer-col-3,.footer-col-4{
-    min-width: 250px;
-    margin-bottom: 20px;
-}
-
-.footer-col-1{
-    flex-basis:30%;
-}
-.footer-col-2{
-    flex:1;
-    text-align: center;
-}
-
-.footer-col-1 img{
-    width:180px;
-    /* margin-bottom: 20px; */
-}
-
-.footer-col-3,.footer-col-4{
-    flex-basis:12%;
-    text-align: center;
-}
-
-ul {
-    list-style-type: none;
-}
-
-.app-logo{
-    margin-top: 20px;
-}
-
-.app-logo img{
-    width:140px;
-}
-.footer hr{
-    border: none;
-    background: rgb(246, 247, 247);
-    height: 1px;
-    margin:20px 0;
-}
-
-.copyright{
-    text-align: center;
-}
-
 .discount{
     display: flex;
 }
 
-.menu-icon{
-    width: 28px;
-    height: 30px;
-    margin-left: 20px;
-    display:none;
-}
+
 
 /*applicable for devices only with screen less than 768px*/
 @media only screen and (max-width:768px){
-    nav ul{
-        position:absolute;
-        top:70px;
-        left:0;
-        background-color:rgb(235, 194, 183,0.7);
-        width:100%;
-        overflow: hidden;
-        transition:0.5s;
-    }
-     nav ul li{
-        display: block;
-        margin : 10px 50px 10px 0; 
-    }
     
-    nav ul li a{
-        color:rgb(150, 0, 187);
-    }
-
-    .menu-icon{
-        display:block;
-        cursor:pointer;
-    }
-
+    
     .fa.fa-shopping-basket{
         color:rgb(150, 0, 187);
     }
