--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,22 +1,26 @@
 .navbar {
   display: flex;
   align-items: center;
+  justify-content: space-around;
   padding: 20px;
+  backdrop-filter: blur(10px);
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top:0;
+  width: 100%;
+  z-index: 100;
 }
 
-nav {
-  flex: 1;
-  text-align: right;
-  display: flex;
-  justify-content: flex-end;
+.responsive_menu{
+  display: none;
 }
-
-nav ul {
+.menus ul {
   display: inline-block;
   list-style-type: none;
 }
 
-nav ul li {
+.menus ul li {
   display: inline-block;
   margin-right: 20px;
 }
@@ -33,16 +37,18 @@ a {
 }
 
 @media only screen and (max-width: 768px) {
-  nav ul {
+
+  .menus ul {
     position: absolute;
     top: 70px;
-    left: 0;
-    width: 100%;
     overflow: hidden;
     transition: 0.5s;
-    display: block;
+    text-align: right;
+    backdrop-filter: blur(10px);
+    background-color: rgba(255, 255, 255, 0.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
-  nav ul li {
+  .menus ul li {
     display: block;
     margin: 10px 50px 10px 0;
   }
