--- a/styles/product.css
+++ b/styles/product.css
@@ -117,7 +117,7 @@ td:first-child,th:first-child{
     width: 300px;
 }
 
-td:nth-child(2),th:nth-child(2),td:nth-child(3),th:nth-child(3){
+td:nth-child(2),th:nth-child(2),td:nth-child(3),th:nth-child(3),td:nth-child(4),th:nth-child(4){
     width:320px;
 }
 
