--- a/styles/about.css
+++ b/styles/about.css
@@ -1,11 +1,43 @@
-/* .main-container{
-    min-height: 427px;
-} */
-
-.col-4{
-    flex-basis: 25% !important;
+#container {
+  margin: 10rem 1.5rem 1.5rem 15px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.col-4 img{
-    width:150px !important;
-    height:150px!important;
+
+#container h1 {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.president {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 5rem;
+  box-shadow: 0 0 10px rgba(107, 107, 107, 0.5);
+  padding: 2rem;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  width: 50%;
+  flex-wrap: wrap;
+}
+
+.president_img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  object-fit: contain;
+}
+
+.president p {
+  font-size: 1.2rem;
+  font-weight: 500;
+  margin: 0;
+  width: 500px;
+  text-align: justify;
 }
