--- a/styles/account.css
+++ b/styles/account.css
@@ -1,78 +1,95 @@
-.main-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin:20px;
-    padding:20px;
+
+.main-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 7.5rem 1.25rem 1.25rem 1.25rem;
+  padding: 1.25rem;
 }
 
-.account-container{
-    border: 2px solid white;
-    border-radius: 25px;
-    display: flex;
-    padding: 50px;
-    margin:20px !important;
-    box-shadow: 0 2.5px 10px black;
-    min-width:768px;
-    max-width:768px;
-    min-height: 490px;
+.account-container {
+  border: 2px solid white;
+  display: flex;
+  padding: 50px;
+  margin: 20px !important;
+  box-shadow: 0 2.5px 10px rgb(102, 102, 102);
+  min-width: 768px;
+  max-width: 768px;
+  min-height: 490px;
 }
 
-.acc-titles{
-    flex-basis: 40%;
+.acc-titles {
+  flex-basis: 40%;
 }
 
 .v1 {
-    border-left: 2px solid black;
-    height: auto;
-    margin-left: 20px;
-    flex-basis: 5%;
- }
-
- .acc-details h3{
-    border-bottom: 2px solid black;
-    padding: 25px 0px;
- }
-
-.dele{
-    border:none !important;
- }
-
- .details{
-    flex-basis: 55%;
- }
-
- .pi-details,.ai-details{
-    padding:25px;
-    display: flex;
-    flex-direction: column;
- }
-
- .ea-details,.da-details{
-    padding:25px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
- }
-
- .change-btn{
-    text-align: center;
-    display:inline-block;
-    background-color:rgb(55, 52, 52);
-    color:white;
-    padding:8px 30px;
-    border-radius: 30px;
-    transition: background-color 0.5s ;
- }
-
- .change-btn:hover{
-    background-color:rgb(0, 0, 0);
+  border-left: 2px solid rgb(18, 98, 216);
+  height: auto;
+  margin-left: 20px;
+  flex-basis: 5%;
 }
 
-@media only screen and (max-width:768px){
-    .account-container{
-        min-width:400px;
-        max-width:400px;
-        min-height: 300px;
-    }
+.acc-details h3 {
+  border-bottom: 2px solid rgb(18, 98, 216);
+  padding: 25px 0px;
+}
+
+.dele {
+  border: none !important;
+}
+
+.details {
+  flex-basis: 55%;
+}
+
+#pi-details,
+#ai-details {
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+}
+
+#ea-details,
+#da-details {
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.change-btn {
+  text-align: center;
+  font-size: 1rem;
+  display: inline-block;
+  background-color: rgb(18, 98, 216);
+  color: white;
+  padding: 8px 8px;
+  border: none;
+  border-radius: 30px;
+  transition: background-color 0.5s;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.change-btn:hover {
+  background-color: rgb(7, 57, 172);
+}
+
+.delete-btn{
+    position: relative;
+    top: 50%;
+    left: 25%;
+    background-color: rgb(216, 31, 18);
+}
+
+.delete-btn:hover{
+    background-color: rgb(172, 7, 7);
+}
+
+@media only screen and (max-width: 768px) {
+  .account-container {
+    min-width: 400px;
+    max-width: 400px;
+    min-height: 300px;
+  }
 }
