--- a/styles/cart.css
+++ b/styles/cart.css
@@ -140,3 +140,13 @@ td input {
     flex-direction: column;
   }
 }
+
+
+#note{
+  color:red;
+  display:flex;
+  justify-content:center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+}
